<resources>
    <string name="app_name">nyxdroid</string>
    <string name="app_version">api reboot-beta</string>
    <string name="app_name_and_version">nyxdroid </string>
    <string name="general_error_occured">Error occurred, please try again later.</string>
    <string name="authorization_activity_nick">ID :</string>
    <string name="authorization_activity_code">Code :</string>
    <string name="authorization_activity_get_code">Get code</string>
    <string name="authorization_activity_finished">Done!</string>
    <string name="authorization_activity_result_instructions">Please enter your Nick/ID and press \'Get code\'.</string>
    <string name="authorization_activity_result_new">Your request was successful, please go to PERSONAL / SETTINGS / AUTHORIZATION and enter code there.</string>
    <string name="authorization_activity_result_existing">This Nick/ID is already authorized, if you need new code, please go to PERSONAL / SETTINGS / AUTHORIZATION and cancel existing authorization. After that you can request new code.</string>
    <string name="authorization_activity_result_error">Unexpected error, please contact author for further help.</string>
    <string name="authorization_activity_wait_title">Please wait</string>
    <string name="authorization_activity_wait_message">Connecting to nyx.cz…</string>
    <string name="app_name_feed">feed</string>
    <string name="feed_new">New</string>
    <string name="feed_refresh">Refresh</string>
    <string name="feed_comments_count">Comments: $1</string>
    <string name="feed_enter_status_message">Message :</string>
    <string name="feed_post_status_message">Send</string>
    <string name="feed_post_cancel">Cancel</string>
    <string name="feed_enter_your_comment">Enter comment :</string>
    <string name="feed_post_comment_message">Send</string>
    <string name="app_name_mail">mail</string>
    <string name="mail_new">New</string>
    <string name="mail_refresh">Refresh</string>
    <string name="app_name_bookmarks">bookmarks</string>
    <string name="app_name_bookmarks_history">history</string>
    <string name="app_name_friends">friends</string>
    <string name="app_name_saved">saved</string>
    <string name="app_name_search">search</string>
    <string name="app_name_settings">settings</string>
    <string name="app_name_exit">logout</string>
    <string name="enter_your_message_">Enter your message...</string>
    <string name="send">Send</string>
    <string name="enter_recipient_apos_s_nick">Recipient</string>
    <string name="ok">OK</string>
    <string name="new_message">New message</string>
    <string name="new_mail_to_">Recipient...</string>
    <string name="reply">Reply</string>
    <string name="copy">Copy</string>
    <string name="reminder">Reminder</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="bookmarks_search">Search</string>
    <string name="new_writeup">New</string>
    <string name="writeup_refresh">Refresh</string>
    <string name="app_name_writeup"></string>
    <string name="app_name_compose_writeup">New</string>
    <string name="send_mail">Send mail</string>
    <string name="go_to_discussion">To discussion</string>
    <string name="view_as_gallery">View as gallery</string>
    <string name="gallery">Gallery</string>
    <string name="app_name_notifications">notices</string>
    <string name="app_name_gallery">Gallery</string>
    <string name="unable_to_load_image_">Unable to load image.</string>
    <string name="standard_http_protocol_will_be_used_">Standard HTTP protocol will be used.</string>
    <string name="secure_http_protocol_will_be_used_">Encrypted HTTP protocol will be used.</string>
    <string name="communication_via_ssl">Communication via SSL</string>
    <string name="only_trused_ssl_certificates_will_be_accepted">Accept only trusted SSL certificates.</string>
    <string name="all_ssl_certificates_will_be_accepted">Accept all SSL certificates.</string>
    <string name="ssl_certificates">SSL certificates</string>
    <string name="app_name_about">about</string>
    <string name="connectivity">Connectivity</string>
    <string name="misc_">Misc.</string>
    <string name="default_startup_activity">Startup activity</string>
    <string name="choose_which_activity_will_be_started_first">Please choose what activity will be started at launch.</string>
    <string name="anonymous_vote_warning">This user chose that his posts can\'t be rated negatively anonymously. If you want to rate it visibly, click Yes.</string>
    <string name="anonymous_vote_warning_title">Confirmation</string>
    <string name="negative_button">No</string>
    <string name="positive_button">Yes</string>
    <string name="view_replies">View replies</string>
    <string name="writeup_responses">Replies: </string>
    <string name="appearance">Appearance</string>
    <string name="appearance_white_theme">Light Holo theme will be used.</string>
    <string name="appearance_dark_theme">Dark Holo theme will be used</string>
    <string name="dark_theme">Holo Dark</string>
    <string name="hodnocen_">Rating</string>
    <string name="no_one_at_this_time">No one</string>
    <string name="no_responses_for_this_writeup">No replies for this write-up.</string>
    <string name="clear_credentials">Clear authorization</string>
    <string name="ge_begin">To beginning</string>
    <string name="ge_current">To current</string>
    <string name="send_application_log">Send application log</string>
    <string name="im_sending_you_application_log">I\'m sending application log to you.</string>
    <string name="send_application_log_title">Send log</string>
    <string name="you_dont_have_email_client_installed">You don\'t have any email client installed.</string>
    <string name="application_log_wasnt_created_yet">Application log wasn\'t created yet.</string>
    <string name="dont_display">Don\'t display</string>
    <string name="always_display">Always display</string>
    <string name="read_bookmarks">Read in bookmarks</string>
    <string name="read_history">Read in history</string>
    <string name="history_show_unread">Show only unread discussions</string>
    <string name="history_show_all">Show all history</string>
    <string name="bookmarks_show_all">Show all followed discussions</string>
    <string name="app_name_events">events</string>
    <string name="app_name_event_detail">...</string>
    <string name="event_details">Details</string>
    <string name="event_comments">Comments</string>
    <string name="event_comments_not_implemented_yet">Comments aren\'t implemented yet.</string>
    <string name="change_status">Change status</string>
    <string name="choose_one_from_options">Please make your choice...</string>
    <string name="no_data">It\'s empty here.</string>
    <string name="tab_title_discussion">Discussion</string>
    <string name="tab_title_headerhome">Header</string>
    <string name="tab_title_board">Noticeboard</string>
    <string name="board_empty">The noticeboard is empty.</string>
    <string name="event_choose_status">Choose</string>
    <string name="warning">Warning</string>
    <string name="are_you_sure_authorization_is_complete">Are you sure you have completed authorization ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="error">Error</string>
    <string name="authorization_error_message">Your authorization is invalid. You probably cancelled it on NYX or you didn\'t correctly finished application authorization. Please restart application, authorization will start from beginning.</string>
    <string name="unspecified_data_error">Communication error occurred. Possible reason: access denied. Please send application log from settings menu if you\'re not sure about it.</string>
    <string name="use_regular">Use regular</string>
    <string name="use_to_return_writeups">Use to back-navigate between linked write-up(s)</string>
    <string name="backpress_button">Back button</string>
    <string name="header_maybe_it_is_not_setup">It\'s empty here.</string>
    <string name="choose_font_size">Please choose font size</string>
    <string name="font_size">Font size</string>
    <string name="event_start">Beginning :</string>
    <string name="event_end">End :</string>
    <string name="event_location">Location :</string>
    <string name="you_dont_have_write_rights">You\'re read-only here.</string>
    <string name="attachment">Attachment</string>
    <string name="file_doesnt_exists_or_cant_read">File either doesn\'t exists or is unreadable !</string>
    <string name="and_what_about_message">And what about message ?</string>
    <string name="and_what_about_nick">And what about recipient ?</string>
    <string name="choose_bookmarks_padding">Please choose row-padding in bookmarks or history</string>
    <string name="choose_bookmarks_padding_title">Row padding</string>
    <string name="something_terrible_happened_to_nyx">Something terrible happened to NYX. Uhm.</string>
    <string name="notifications_disabled">Custom notification settings</string>
    <string name="notifications_enabled">Standard notification settings</string>
    <string name="notifications">Notifications</string>
    <string name="display_voting_thumbs">Display rating</string>
    <string name="dont_display_voting_thumbs">Don\'t display rating controls or rating itself.</string>
    <string name="always_display_voting_thumbs">Always display rating controls or rating itself.</string>
    <string name="discussion_doesnt_contain_images">Discussion doesn\'t contain images.</string>
    <string name="wu_voteup">Thumbs up</string>
    <string name="wu_votedown">Thumbs down</string>
    <string name="share_to_discussion">Share to discussion</string>
    <string name="really_wanna_share">Really ?</string>
    <string name="are_you_sure_you_wanna_share_this">Are you sure you want to share into: %s</string>
    <string name="copy_link_to_wu">Copy link</string>
    <string name="timeformat_day_before_yesterday" formatted="false">předevčírem %02d:%02d:%02d</string>
    <string name="timeformat_yesterday" formatted="false">včera %02d:%02d:%02d</string>
    <string name="timeformat_today" formatted="false">dnes %02d:%02d:%02d</string>
    <string name="unread_appearance">Unread write-up style</string>
    <string name="choose_color_or_standard_settings">Please choose standard settings or colored.</string>
    <string name="experimental_gif_support">Experimental GIF support</string>
    <string name="advert_label_title">Title</string>
    <string name="advert_label_category">Category</string>
    <string name="advert_label_summary">Summary</string>
    <string name="advert_label_description">Description</string>
    <string name="advert_label_price">Price</string>
    <string name="advert_label_currency">Currency</string>
    <string name="advert_label_shipping">Shipping</string>
    <string name="advert_label_location">Location</string>
    <string name="notify_on_mail">Notify on mail</string>
    <string name="notify_on_reply">Notify on reply</string>
    <string name="notification_sound">Notification sound</string>
    <string name="book_or_unbook_placeholder">Book or unbook</string>
    <string name="use_beta_api">Use beta API</string>
    <string name="default_non_developer_settings">Default, non-developer settings</string>
    <string name="you_have_to_know_what_are_you_doing">You have to know what are you doing !</string>
    <string name="refresh_after_sending_writeup">Refresh after sending writeup</string>
    <string name="refresh_after_sending_writeup_always">Always</string>
    <string name="refresh_after_sending_writeup_never">Never</string>
    <string name="reply_to_more_writeups">Reply to more writeups</string>
    <string name="scale_images_by_device_dpi">Scale images by device DPI</string>
</resources>