<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/reply"
        android:icon="?attr/reply_icon"
        android:showAsAction="always"
        android:title="@string/reply"/>
    <item
        android:id="@+id/sendmail"
        android:icon="?attr/mail_icon"
        android:showAsAction="always"
        android:title="@string/send_mail"/>
    <item
        android:id="@+id/viewreplies"
        android:icon="?attr/dialog_icon"
        android:showAsAction="always"
        android:title="@string/view_replies"/>
    <item
        android:id="@+id/viewrating"
        android:icon="?attr/half_star_icon"
        android:title="@string/hodnocen_"/>
    <item
        android:id="@+id/copy"
        android:icon="?attr/copy_icon"
        android:title="@string/copy"/>
    <item
        android:id="@+id/view_as_gallery_from_here"
        android:icon="?attr/picture_icon"
        android:title="@string/view_as_gallery"/>
    <item
        android:id="@+id/reminder"
        android:icon="?attr/alarm_icon"
        android:title="@string/reminder"/>
    <item
        android:id="@+id/delete"
        android:icon="?attr/trash_icon"
        android:title="@string/delete"/>
    <item
        android:id="@+id/copylink"
        android:showAsAction="never"
        android:title="@string/copy_link_to_wu"/>

</menu>