<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/compose"
        android:icon="?attr/add_icon"
        app:showAsAction="always"
        android:title="@string/new_writeup"/>
    <item
        android:id="@+id/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="?attr/search_icon"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search"/>
    <item
        android:id="@+id/refresh"
        android:icon="?attr/reload_icon"
        app:showAsAction="always"
        android:title="@string/writeup_refresh"/>
    <item
        android:id="@+id/gallery"
        android:icon="?attr/picture_icon"
        app:showAsAction="never"
        android:title="@string/view_as_gallery"/>
    <item
        android:id="@+id/replytomorewriteups"
        app:showAsAction="never"
        android:title="@string/reply_to_more_writeups"/>
    <item
        android:id="@+id/book_or_unbook"
        app:showAsAction="never"
        android:title="@string/book_or_unbook_placeholder"/>

</menu>