<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/reply"
        android:icon="?attr/reply_icon"
        android:title="@string/reply"
        app:showAsAction="always" />
    <item
        android:id="@+id/copy"
        android:icon="?attr/copy_icon"
        android:title="@string/copy"
        app:showAsAction="always" />
    <item
        android:id="@+id/reminder"
        android:icon="?attr/alarm_icon"
        android:title="@string/reminder"
        app:showAsAction="always" />
    <item
        android:id="@+id/delete"
        android:icon="?attr/trash_icon"
        android:title="@string/delete"
        app:showAsAction="always" />

</menu>