<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/voteup"
        android:icon="?attr/wu_voteup"
        android:title="@string/wu_voteup"
        app:showAsAction="always" />
    <item
        android:id="@+id/votedown"
        android:icon="?attr/wu_votedown"
        android:title="@string/wu_votedown"
        app:showAsAction="always" />
    <item
        android:id="@+id/attachment"
        android:icon="?attr/attachment_icon"
        android:title="@string/attachment"
        app:showAsAction="always" />
    <item
        android:id="@+id/send"
        android:icon="?attr/send_icon"
        android:title="@string/send"
        app:showAsAction="always" />

</menu>