<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/advert_label_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/advert_label_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/advert_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/advert_label_category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/advert_label_category"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/advert_category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/advert_label_summary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/advert_label_summary"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/advert_summary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/advert_label_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/advert_label_description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/advert_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/advert_label_price"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/advert_label_price"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/advert_price"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/advert_label_currency"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/advert_label_currency"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/advert_currency"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/advert_label_shipping"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/advert_label_shipping"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/advert_shipping"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/advert_label_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/advert_label_location"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/advert_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>