<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="4dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/event_time_start_label"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/event_start"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/event_time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/event_time_end_label"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/event_end"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/event_time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/event_location_label"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/event_location"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/event_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/event_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp" />
    </LinearLayout>

</ScrollView>